--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ name = "EnumTest"
 path = "src/EnumTest.rs"
 
 [[bin]]
-name = "AddReadFile"
-path = "src/AddReadFile/main.rs"
+name = "TemperatureConverter"
+path = "src/TemperatureConverter/main.rs"
